Fixed off centered Date buttons

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ h1 {
   gap: 10px;
   justify-content: center;
   margin-bottom: 20px;
-  padding: 0 20px;
 }
 
 input[type="date"],
@@ -118,6 +117,11 @@ button:hover {
   .logo {
     width: 100px;
   }
+
+  .filters {
+    align-items: center;
+  }
+
 }
 
 .gallery {
